# Praesidium

./: .releaserc  CMakeLists.txt  CMakeUserPresets.json  README.md  vcpkg.json
.github/: build-windows.yml
.github/workflows/: build-windows.yml
docs/: CHANGELOG.md
include/: socket_trace.h  utilities.h
src/: dummy.cc  main.cc  socket_trace.cc  utilities.cc
